--- a/src/main/resources/sprawozdanie.tex
+++ b/src/main/resources/sprawozdanie.tex
@@ -364,5 +364,147 @@ wszystkie & 2653,00 / 5409 & 49,05\%\\
 
 
 
+\newpage
+\subsection{Porównanie wpływu metryki na klasyfikacje}
+
+\subsubsection{Wszystkie cechy, k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 61 & 22 & 23 & 90 & 11 & 11\\
+\hline
+west-germany & 36 & 21 & 11 & 51 & 10 & 4\\
+\hline
+canada & 34 & 35 & 79 & 152 & 7 & 10\\
+\hline
+usa & 303 & 298 & 1343 & 2266 & 71 & 60\\
+\hline
+france & 16 & 17 & 5 & 42 & 11 & 4\\
+\hline
+uk & 32 & 54 & 47 & 123 & 16 & 33\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 61 / 218 & 27,98\%\\
+\hline
+west-germany & 21 / 133 & 15,79\%\\
+\hline
+canada & 79 / 317 & 24,92\%\\
+\hline
+usa & 2266 / 4341 & 52,20\%\\
+\hline
+france & 11 / 95 & 11,58\%\\
+\hline
+uk & 33 / 305 & 10,82\%\\
+\hline
+wszystkie & 2471,00 / 5409 & 45,68\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+\newpage
+\subsubsection{Wszystkie cechy, k = 8, metryka: czebyszewa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 58 & 29 & 21 & 87 & 21 & 2\\
+\hline
+west-germany & 39 & 14 & 11 & 51 & 17 & 1\\
+\hline
+canada & 43 & 24 & 57 & 179 & 10 & 4\\
+\hline
+usa & 377 & 180 & 886 & 2760 & 94 & 44\\
+\hline
+france & 21 & 16 & 5 & 48 & 4 & 1\\
+\hline
+uk & 49 & 31 & 51 & 143 & 24 & 7\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 58 / 218 & 26,61\%\\
+\hline
+west-germany & 14 / 133 & 10,53\%\\
+\hline
+canada & 57 / 317 & 17,98\%\\
+\hline
+usa & 2760 / 4341 & 63,58\%\\
+\hline
+france & 4 / 95 & 4,21\%\\
+\hline
+uk & 7 / 305 & 2,30\%\\
+\hline
+wszystkie & 2900,00 / 5409 & 53,61\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+
+
+\newpage
+\subsubsection{Wszystkie cechy, k = 8, metryka: uliczna, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 45 & 30 & 21 & 31 & 25 & 66\\
+\hline
+west-germany & 35 & 10 & 10 & 17 & 24 & 37\\
+\hline
+canada & 30 & 37 & 106 & 69 & 11 & 64\\
+\hline
+usa & 274 & 274 & 1683 & 1419 & 98 & 593\\
+\hline
+france & 14 & 14 & 4 & 15 & 16 & 32\\
+\hline
+uk & 34 & 46 & 57 & 40 & 22 & 106\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 45 / 218 & 20,64\%\\
+\hline
+west-germany & 10 / 133 & 7,52\%\\
+\hline
+canada & 106 / 317 & 33,44\%\\
+\hline
+usa & 1419 / 4341 & 32,69\%\\
+\hline
+france & 16 / 95 & 16,84\%\\
+\hline
+uk & 106 / 305 & 34,75\%\\
+\hline
+wszystkie & 1702,00 / 5409 & 31,47\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+
 
 \end{document}
