--- a/src/main/resources/sprawozdanie.tex
+++ b/src/main/resources/sprawozdanie.tex
@@ -507,4 +507,287 @@ wszystkie & 1702,00 / 5409 & 31,47\%\\
 
 
 
+
+\newpage
+\subsection{Porównanie wpływu usunięcia danej cechy na klasyfikacje}
+
+\subsubsection{Wszystkie cechy oprócz średniej pozycji słów kluczowych od środka dokumentu., k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 13 & 3 & 5 & 160 & 30 & 7\\
+\hline
+west-germany & 10 & 7 & 7 & 92 & 17 & 0\\
+\hline
+canada & 11 & 2 & 53 & 237 & 11 & 3\\
+\hline
+usa & 68 & 9 & 673 & 3459 & 95 & 37\\
+\hline
+france & 0 & 2 & 4 & 71 & 18 & 0\\
+\hline
+uk & 16 & 4 & 23 & 218 & 16 & 28\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 13 / 218 & 5,96\%\\
+\hline
+west-germany & 7 / 133 & 5,26\%\\
+\hline
+canada & 53 / 317 & 16,72\%\\
+\hline
+usa & 3459 / 4341 & 79,68\%\\
+\hline
+france & 18 / 95 & 18,95\%\\
+\hline
+uk & 28 / 305 & 9,18\%\\
+\hline
+wszystkie & 3578,00 / 5409 & 66,15\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+\subsubsection{Wszystkie cechy oprócz pierwszego słowa w dokumencie., k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 72 & 10 & 18 & 86 & 23 & 9\\
+\hline
+west-germany & 45 & 16 & 9 & 40 & 14 & 9\\
+\hline
+canada & 54 & 11 & 32 & 192 & 7 & 21\\
+\hline
+usa & 461 & 74 & 284 & 3198 & 81 & 243\\
+\hline
+france & 31 & 6 & 11 & 34 & 8 & 5\\
+\hline
+uk & 61 & 25 & 34 & 123 & 21 & 41\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 72 / 218 & 33,03\%\\
+\hline
+west-germany & 16 / 133 & 12,03\%\\
+\hline
+canada & 32 / 317 & 10,09\%\\
+\hline
+usa & 3198 / 4341 & 73,67\%\\
+\hline
+france & 8 / 95 & 8,42\%\\
+\hline
+uk & 41 / 305 & 13,44\%\\
+\hline
+wszystkie & 3367,00 / 5409 & 62,25\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+
+\newpage
+\subsubsection{Wszystkie cechy oprócz ważonej pozycycji słowa kluczowego w dokumencie., k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 31 & 51 & 4 & 107 & 11 & 14\\
+\hline
+west-germany & 30 & 31 & 11 & 46 & 13 & 2\\
+\hline
+canada & 25 & 56 & 43 & 173 & 5 & 15\\
+\hline
+usa & 220 & 471 & 765 & 2725 & 86 & 74\\
+\hline
+france & 11 & 26 & 4 & 40 & 9 & 5\\
+\hline
+uk & 20 & 81 & 24 & 138 & 16 & 26\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 31 / 218 & 14,22\%\\
+\hline
+west-germany & 31 / 133 & 23,31\%\\
+\hline
+canada & 43 / 317 & 13,56\%\\
+\hline
+usa & 2725 / 4341 & 62,77\%\\
+\hline
+france & 9 / 95 & 9,47\%\\
+\hline
+uk & 26 / 305 & 8,52\%\\
+\hline
+wszystkie & 2865,00 / 5409 & 52,97\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+
+\newpage
+\subsubsection{Wszystkie cechy oprócz najczęściej występujących dwuliterowych podciągów. k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 35 & 43 & 28 & 26 & 17 & 69\\
+\hline
+west-germany & 35 & 16 & 5 & 26 & 20 & 31\\
+\hline
+canada & 29 & 50 & 82 & 98 & 7 & 51\\
+\hline
+usa & 249 & 346 & 1230 & 1839 & 65 & 612\\
+\hline
+france & 14 & 16 & 9 & 7 & 31 & 18\\
+\hline
+uk & 27 & 56 & 34 & 55 & 21 & 112\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 35 / 218 & 16,06\%\\
+\hline
+west-germany & 16 / 133 & 12,03\%\\
+\hline
+canada & 82 / 317 & 25,87\%\\
+\hline
+usa & 1839 / 4341 & 42,36\%\\
+\hline
+france & 31 / 95 & 32,63\%\\
+\hline
+uk & 112 / 305 & 36,72\%\\
+\hline
+wszystkie & 2115,00 / 5409 & 39,10\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+\newpage
+\subsubsection{Wszystkie cechy oprócz stosunku ilości słów kluczowych występujących w pierwszej i czwartej ćwiartce słów w dokumencie do ilości słów kluczowych występujących w drugiej i trzeciej ćwiartce słów w dokumencie.. k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 62 & 7 & 6 & 129 & 11 & 3\\
+\hline
+west-germany & 34 & 9 & 3 & 75 & 11 & 1\\
+\hline
+canada & 40 & 8 & 30 & 227 & 6 & 6\\
+\hline
+usa & 301 & 49 & 371 & 3518 & 66 & 36\\
+\hline
+france & 20 & 5 & 0 & 57 & 11 & 2\\
+\hline
+uk & 40 & 11 & 13 & 196 & 18 & 27\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 62 / 218 & 28,44\%\\
+\hline
+west-germany & 9 / 133 & 6,77\%\\
+\hline
+canada & 30 / 317 & 9,46\%\\
+\hline
+usa & 3518 / 4341 & 81,04\%\\
+\hline
+france & 11 / 95 & 11,58\%\\
+\hline
+uk & 27 / 305 & 8,85\%\\
+\hline
+wszystkie & 3657,00 / 5409 & 67,61\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+\newpage
+\subsubsection{Wszystkie cechy oprócz stosunku ilości unikalnych słów do ilości słów w dokumencie. k = 8, metryka: euklidesowa, słów kluczowych na klasę: 30}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|c|}
+\hline
+ X  & japan & west-germany & canada & usa & france & uk\\
+\hline
+japan & 61 & 22 & 23 & 90 & 11 & 11\\
+\hline
+west-germany & 36 & 21 & 11 & 51 & 10 & 4\\
+\hline
+canada & 34 & 35 & 79 & 152 & 7 & 10\\
+\hline
+usa & 303 & 298 & 1343 & 2266 & 71 & 60\\
+\hline
+france & 16 & 17 & 5 & 42 & 11 & 4\\
+\hline
+uk & 32 & 54 & 47 & 123 & 16 & 33\\
+\hline
+\end{tabular}
+\caption{Macierz pomyłek}\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Etykieta & Wynik klasyfikacji & procent\\
+\hline
+japan & 61 / 218 & 27,98\%\\
+\hline
+west-germany & 21 / 133 & 15,79\%\\
+\hline
+canada & 79 / 317 & 24,92\%\\
+\hline
+usa & 2266 / 4341 & 52,20\%\\
+\hline
+france & 11 / 95 & 11,58\%\\
+\hline
+uk & 33 / 305 & 10,82\%\\
+\hline
+wszystkie & 2471,00 / 5409 & 45,68\%\\
+\hline
+\end{tabular}
+\caption{Ilość poprawnie skwalifikowanych}\end{table}
+
+
+
 \end{document}
